# bank

./: .gitignore  pyproject.toml
bank/api/: admin.py  models.py  serializers.py  urls.py  views.py
bank/bank/: settings.py  urls.py
bank/bank/static/: main.css
bank/bank/templates/: base.html
bank/bank/templates/registration/: login.html  register.html  register_done.html  success.html
bank/web/: filters.py  forms.py  urls.py  views.py
bank/web/templates/web/: account.html  transaction.html  transfer.html  web.html
